--- a/src/components/spinners/LoadingSpinner/LoadingSpinner.module.scss
+++ b/src/components/spinners/LoadingSpinner/LoadingSpinner.module.scss
@@ -1,11 +1,12 @@
 .lds_ellipsis {
 	display: inline-block;
 	position: absolute;
-	top: 50vw;
-	left: 50vh;
+	top: 50%;
+	left: 50%;
 	width: 80px;
 	height: 80px;
 }
+
 .lds_ellipsis div {
 	position: absolute;
 	top: 33px;
@@ -13,25 +14,30 @@
 	height: 13px;
 	border-radius: 50%;
 	background: #000;
-	box-shadow: 0 0 5px 5px #FFFFFF;
+	box-shadow: 0 0 5px 5px #888888;
 	animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
+
 .lds_ellipsis div:nth-child(1) {
 	left: 8px;
 	animation: lds_ellipsis1 0.6s infinite;
 }
+
 .lds_ellipsis div:nth-child(2) {
 	left: 8px;
 	animation: lds_ellipsis2 0.6s infinite;
 }
+
 .lds_ellipsis div:nth-child(3) {
 	left: 32px;
 	animation: lds_ellipsis2 0.6s infinite;
 }
+
 .lds_ellipsis div:nth-child(4) {
 	left: 56px;
 	animation: lds_ellipsis3 0.6s infinite;
 }
+
 @keyframes lds_ellipsis1 {
 	0% {
 		transform: scale(0);
@@ -40,6 +46,7 @@
 		transform: scale(1);
 	}
 }
+
 @keyframes lds_ellipsis3 {
 	0% {
 		transform: scale(1);
@@ -48,6 +55,7 @@
 		transform: scale(0);
 	}
 }
+
 @keyframes lds_ellipsis2 {
 	0% {
 		transform: translate(0, 0);
